--- a/css/styles.css
+++ b/css/styles.css
@@ -109,20 +109,17 @@
      * color-2(#eb5e55)
      * color-3(#f2d0a4)
      */
-    --color-1: hsla(345, 93%, 44%, 1);
-    --color-2: hsla(4, 79%, 63%, 1);
+    --color-1: #3282b8;
+    --color-2: #64a8d4;
     --color-3: hsla(34, 75%, 80%, 1);
 
     /* theme color variations
      */
-    --color-1-lighter: hsla(345, 93%, 64%, 1);
-    --color-1-light  : hsla(345, 93%, 54%, 1);
-    --color-1-dark   : hsla(345, 93%, 34%, 1);
-    --color-1-darker : hsla(345, 93%, 24%, 1);
-    --color-2-lighter: hsla(4, 79%, 83%, 1);
-    --color-2-light  : hsla(4, 79%, 73%, 1);
-    --color-2-dark   : hsla(4, 79%, 53%, 1);
-    --color-2-darker : hsla(4, 79%, 43%, 1);
+    --color-1-lighter: #bbe1fa;
+    --color-1-light  : #bbe1fa;
+    --color-1-dark   : #0f4c75;
+    --color-1-darker : #0f4c75;
+
 
     /* feedback colors
      * color-error(#ffd1d2), color-success(#c8e675), 
@@ -267,6 +264,18 @@
     }
 }
 
+body::-webkit-scrollbar {
+    width: 0.3em;
+  }
+   
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.658);
+  }
+   
+  body::-webkit-scrollbar-thumb {
+    background-color: #062b41d2;
+    outline: 1px solid rgba(112, 128, 144, 0);
+  }
 
 /* ------------------------------------------------------------------- 
  * ## grid variables
