--- a/css/styles.css
+++ b/css/styles.css
@@ -4173,7 +4173,7 @@ html.no-csstransitions .s-hero__content {
 }
 
 .s-services .block-large-1-2 .column {
-    max-width: 45% !important;
+    max-width: 48% !important;
 }
 
 .s-services .lead {
@@ -4190,8 +4190,8 @@ html.no-csstransitions .s-hero__content {
 
 .service-icon {
     position: absolute;
-    left: 20px;
-    top: 20px;
+    left: 35px;
+    top: 35px;
     display: inline;
     float: left;
     width: calc(2.25 * var(--space));
@@ -4202,29 +4202,22 @@ html.no-csstransitions .s-hero__content {
     /* margin-right: auto; */
 }
 
-.service-icon--product-design {
-    background-image: url(../images/icons/services/icon-product-design.svg);
+.service-icon--web-dev {
+    background-image: url(../images/icons/services/web-programming.svg);
 }
 
-.service-icon--branding {
-    background-image: url(../images/icons/services/icon-branding.svg);
+.service-icon--mobile {
+    background-image: url(../images/icons/services/smartphone.svg);
 }
 
-.service-icon--frontend {
-    background-image: url(../images/icons/services/icon-frontend.svg);
+.service-icon--ml_ai {
+    background-image: url(../images/icons/services/innovation.svg);
 }
 
-.service-icon--research {
-    background-image: url(../images/icons/services/icon-research.svg);
+.service-icon--cp {
+    background-image: url(../images/icons/services/coding.svg);
 }
 
-.service-icon--illustration {
-    background-image: url(../images/icons/services/icon-illustration.svg);
-}
-
-.service-icon--ecommerce {
-    background-image: url(../images/icons/services/icon-ecommerce.svg);
-}
 
 .card-box {
     overflow: hidden;
