--- a/css/offline.css
+++ b/css/offline.css
@@ -12,6 +12,17 @@ body {
   margin: 30px 0;
 }
 
+.header {
+  margin-top: 5em;
+  margin-bottom: 5em;
+}
+
+.header .header-text {
+  font-size: 2.2em;
+  font-weight: 700;
+  color: #64a8d4;
+}
+
 .heading:after {
   content: "";
   display: block;
