--- a/css/styles.css
+++ b/css/styles.css
@@ -4817,6 +4817,7 @@ html.no-csstransitions .s-hero__content {
     padding-top: var(--vspace-2);
     padding-bottom: var(--vspace-4);
     color: white;
+    background: var(--color-bg);
 }
 
 .s-footer a {
@@ -5024,3 +5025,104 @@ html.no-csstransitions .s-hero__content {
         font-size: 1.4rem;
     }
 }
+
+#gallery{
+    background: var(--color-bg);
+}
+
+.carousel-gallery {
+    background:var(--color-bg);
+    padding: 0 30px;
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .carousel-gallery .swiper-slide {
+    display: block;
+    width: 100%;
+    height: 400px;
+    border-radius: 4px;
+    overflow: hidden;
+    position: relative;
+    -webkit-box-shadow: 3px 2px 20px 0px rgba(0, 0, 0, .2);
+    -moz-box-shadow: 3px 2px 20px 0px rgba(0, 0, 0, .2);
+    box-shadow: 3px 2px 20px 0px rgba(0, 0, 0, .2);
+  }
+  
+  .carousel-gallery .swiper-slide .image {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+  }
+  .carousel-gallery .swiper-slide .image .overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(20, 20, 20, .8);
+    text-align: center;
+    opacity: 0;
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+  }
+  .carousel-gallery .swiper-slide .image .overlay em {
+    color: #fff;
+    font-size: 26px;
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    display: inline-block;
+  }
+  .carousel-gallery .swiper-pagination {
+    position: relative;
+    bottom: auto;
+    text-align: center;
+    margin-top: 25px;
+  }
+  .carousel-gallery .swiper-pagination .swiper-pagination-bullet {
+    background-color: #ffcd60;
+    opacity: 1;
+    height: 12px;
+    width: 12px;
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+  }
+  .carousel-gallery .swiper-pagination .swiper-pagination-bullet:hover {
+    opacity: 0.7;
+  }
+  .carousel-gallery .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: #d63031;
+    transform: scale(1.1, 1.1);
+  }
+  #gallery-container{
+    padding-top: 4em;
+    padding-bottom: 4em;
+  }
+
+  @media(max-width: 1024px){
+      .carousel-gallery{
+          width: 100%;
+      }
+  }
+  @media (max-width: 900px){
+    #gallery-container{
+      padding-top: 2em;
+      padding-bottom: 2em;
+    }
+    .carousel-gallery .swiper-slide{
+      height: 350px;
+    }
+    .carousel-gallery {
+      padding: 0 10px;
+      width: 100%;
+    }
+    
+  }
+
+  
+
+  
