--- a/css/styles.css
+++ b/css/styles.css
@@ -3484,7 +3484,7 @@ input::-moz-focus-inner {
 }
 
 .s-hero__bg {
-    background-image: url(../images/hero-bg.jpg);
+    background-image: url(../images/hero-bg.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -4854,7 +4854,7 @@ html.no-csstransitions .s-hero__content {
     content: "";
     height: 1px;
     width: 33.333%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(255, 255, 255);
     position: absolute;
     top: var(--vspace-0_25);
     left: var(--gutter-lg);
